1.10.1 Released ?? February 2010
	- Add parsing of option arguments.
	- If text style contain 'a' then text in absolute coordinates is drawn.
	- Add extra argument for 'box' command.
	- Add ticks (lines) for Colorbar.
	- Colorbar factor now placed at top of a plot.
	- Bug with missing ticks tunning in Colorbar.
	- Bug of double glyph drawing in mglGraphPS.

1.10 Released 25 December 2009
	- Change license from GPL to LGPL for MathGL core. SWIG-based interfaces still have GPL.
	- Add new plot BoxPlot() for plotting data statistic (max, min, median, quartiles).
	- Add formula for coloring like formulas for curvilinear coordinates.
	- Add C++ wrapper classes for C functions. These classes (mglDataW, mglGraph, mglParse) can be used even in MSVS naturally.
	- Add wxMathGL widget for wxWidgets library.
	- Sufficiently improve documentation.
	- Add speed up compilation (i.e. allow 'make -j3').
	- Add ObjId for determining the object (or line) of picture point.
	- Add ticks drawing for inverted axis (i.e. when Min>Max, not for log-scaled!).
	- Add drawing of log-scaled axis for case Min<Max<0.
	- Several MGL commands can be placed in single string. They have to be separated by column ':'.
	- MGL command 'define' now can define scalar variables, like "define xmin dat.min-1". These variables can be used as later as a number, like "xrange xmin 1".
	- Add MGL command 'ranges' for setting plot ranges (like 'axis' command).
	- Add MGL commands 'break', 'continue' for improving for-cycles.
	- Add automatic increase of the point numbers in plots by formula with singularities (i.e. like Plot("sin(1/x)");
	- Add mglGraph::GetFit() function which return fitted formula.
	- Add function mglGraph::Label() for drawing text at arbitrary place of the screen.
	- Optimize ticks length -- now it don't depend on axis range, but only on SubPlot()/InPlot() functions.
	- Output array in Fit[S]() functions now always distributed in Min*Max range and don't depend on input arrays.