@@ -13,6 +13,13 @@ c. Colorbar: print more digits for manual arrays ... but avoid overlapping ???
 6. \dfrac for normal size and centering ???
 7. "Chaos" in area.png (near axis) ???
 
+8. Options "iI_-aA" for colorbar
+9. MGL: temporary arrays as code inside [] -- like "dens [sum a 'x']"
+
+10. New docs:
+- 'hist' and mglGraph::Hist()
+
+
 
 					MathGL (for v.2.?) ???
 
