@@ -1,6 +1,6 @@
 @c ------------------------------------------------------------------
 @node MathGL core, Plotter classes, Examples, Top
-@chapter MathGL core
+@chapter Ядро MathGL
 @cindex mglGraph
 
 Основным классом MathGL является класс @strong{mglGraph}, определенный в @code{#include <mgl/mgl.h>}. Он включает в себя множество функций для построения графиков от 1D, 2D и 3D массивов. Он также содержит функции вывода текста и построения осей координат. Есть возможность построения в произвольной системе координат, которая  задается строковыми формулами. Все графические функции используют класс mglData (@pxref{mglData class}) для хранения массивов данных. Это позволяет легко контролировать размеры, работу с памятью и производить обработку данных. Дополнительная информация о цветах, шрифтах, вычисления формул может быть найдена в @ref{Other classes}.
@@ -717,9 +717,9 @@ Setsize: размер(ы) равны нулю или отрицательны
 Добавляет (включает) перспективу для графика. Параметр @math{a ~ 1/z_@{eff@} \in [0,1)}. По умолчанию (@code{a=0}) перспектива отключена.
 @end deftypefn
 
-@deftypefn {Метод класса @code{mglGraph} (C++, Python)} @code{void} Identity ()
-@deftypefnx {Функция С} @code{void} mgl_identity (@code{HMGL} gr)
-Сбрасывает матрицу трансформации. Эквивалентно вызову @code{InPlot(0,1,0,1)}.
+@deftypefn {Метод класса @code{mglGraph} (C++, Python)} @code{void} Identity (@code{bool} rel=@code{false})
+@deftypefnx {Функция С} @code{void} mgl_identity (@code{HMGL} gr, @code{int} rel)
+Сбрасывает матрицу трансформации. Эквивалентно вызову @code{InPlot(0,1,0,1,rel)}.
 @end deftypefn
 
 @deftypefn {Метод класса @code{mglGraph} (C++)} @code{void} RestoreM ()
@@ -910,6 +910,8 @@ Setsize: размер(ы) равны нулю или отрицательны
 Функции для вывода текста позволяют вывести строку текста в произвольном месте рисунка, в произвольном направлении и вдоль произвольной кривой. Для низкоуровневого вывода и разбора ТеХ-их выражений используется класс mglFont (@pxref{mglFont class}). Он позволяет использовать произвольное начертание шрифта и многие ТеХ-ие команды (детальнее @pxref{mglFont class}). Все функции вывода текста имеют варианты для 8-bit строк (@code{char *}) и для Unicode строк (@code{wchar_t *}). В первом случае используется конверсия из текущей локали, т.е. иногда вам требуется явно указать локаль с помощью функции @code{setlocale()}. Аргумент @var{size} определяет размер текста: размер шрифта если положителен или относительный размер (=-@var{size}*@var{FontSize}) если отрицателен. Начертание шрифта (STIX, arial, courier, times и др) можно изменить с помощью функций SetFont(), GetFont(). @xref{Font settings}.
 
 Параметры шрифта задаются строкой, которая может содержать символы стиля (@samp{rbiwou}) и/или выравнивания (@samp{LRC}). Также строка может содержать символы цвета @samp{wkrgbcymhRGBCYMHW} (@pxref{mglColor class}) после символа @samp{:}. Стили шрифта: @samp{r} -- прямой, @samp{i} -- курсив, @samp{b} -- жирный, @samp{w} -- контурный, @samp{o} -- надчеркнутый, @samp{u} -- подчеркнутый. По умолчанию используется прямой шрифт. Типы выравнивания: @samp{L} -- по левому краю (по умолчанию), @samp{C} -- по центру, @samp{R} -- по правому краю. Например, строка @samp{iC:b} соответствует курсиву синего цвета с выравниванием по центру.
+
+Если строка содержит символы @samp{aA}, то текст выводится в абсолютных координатах (полагаются в диапазоне [0,1]). При этом используются координаты относительно рисунка (если указано @samp{A}) или относительно последнего SubPlot()/InPlot() (если указано @samp{a}).
 
 @deftypefn {Метод класса @code{mglGraph} (C++)} @code{void} Puts (@code{mglPoint} p, @code{const char *}text, @code{const char *}font=@code{""}, @code{float} size=@code{-1}, @code{char} dir=@code{0}, @code{float} shift=@code{0})
 @deftypefnx {Метод класса @code{mglGraph} (C++)} @code{void} Putsw (@code{mglPoint} p, @code{const wchar_t *}text, @code{const char *}font=@code{""}, @code{float} size=@code{-1}, @code{char} dir=@code{0}, @code{float} shift=@code{0})
